# pypgl

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  ROADMAP.md  pypgl.md  pyproject.toml
.github/workflows/: wheels.yml
doc/: README.md  algorithms.md  canvas.md  data_structures.md  shape_methods.md  shapes.md  todo.md  types.md
doc/raw/: canvas.md  data_structures.md  doxylink.py  shapes.md
pypgl/: __init__.py
src/: bind_algorithms.cpp  bind_canvas.cpp  bind_chains.cpp  bind_disk.cpp  bind_lines.cpp  bind_point.cpp  bind_polygon.cpp  bind_polygons.cpp  bind_segment.cpp  bind_shapetree.cpp  bind_transformation.cpp  bind_triangulation.cpp  casters.h  common.h  module.cpp  stubgen_patterns.txt
tests/: test_algorithms.py  test_canvas.py  test_chains.py  test_core_shapes.py  test_disk.py  test_distances.py  test_exact.py  test_intersection.py  test_line_helpers.py  test_polygon.py  test_predicates.py  test_shape_methods.py  test_shapetree.py  test_stubs.py  test_transformation.py  test_transforms.py  test_triangulation.py  test_vertex_queries.py
