[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "pypgl"
version = "0.1.1"
description = "Python bindings for the Pangolin (pgl) exact geometry library"
# README.md is the user-facing front page rendered on PyPI; pypgl.md is the
# internal design contract and is intentionally not shipped as the description.
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Guilherme D. da Fonseca" }]
dependencies = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/gfonsecabr/pypgl"
Repository = "https://github.com/gfonsecabr/pypgl"
"pgl (C++ library)" = "https://github.com/gfonsecabr/pgl"

[tool.scikit-build]
minimum-version = "0.10"
build-dir = "build/{wheel_tag}"
wheel.packages = ["pypgl"]
# Keep dev cruft out of the sdist (CI builds wheels from it).
sdist.exclude = [".ipynb_checkpoints", "**/*.ipynb", ".pytest_cache"]

# pgl is header-only. By default the build uses an in-tree .pgl-ref/include
# checkout if present (offline dev), otherwise CMake FetchContents it. Point at a
# co-developed checkout with:
#   pip install -e . --no-build-isolation -C cmake.define.PGL_INCLUDE_DIR=/path/to/pgl/include

[tool.cibuildwheel]
# pgl is C++20 and header-only with no native deps (its BigInt is pure C++), so a
# wheel build needs only a modern compiler — no system libraries to install.
# The sdist does not ship the gitignored .pgl-ref/, so CMake FetchContents the
# pinned pgl commit (see CMakeLists.txt) during each build.
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
# Skip PyPy (nanobind targets CPython), 32-bit, and musl (lean matrix to start).
skip = "pp* *_i686 *-win32 *-musllinux_*"
build-frontend = "build"
# nanobind_add_stub imports the freshly built _pgl to emit _pgl.pyi, so the wheel
# is verified importable on every target during the build itself; also run tests.
test-requires = "pytest"
test-command = "pytest {project}/tests -q"

[tool.cibuildwheel.linux]
# manylinux_2_28 ships GCC 12 (full C++20); the legacy 2014 image's GCC 10 is not
# enough. Native x86_64 only — no aarch64 emulation, since stub generation has to
# import (i.e. run) the built extension on the build host.
manylinux-x86_64-image = "manylinux_2_28"
archs = ["x86_64"]

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "10.15" }

[tool.cibuildwheel.windows]
# MSVC lacks __int128, so pgl would fall back to Boost.Multiprecision (not
# installed). Build with the LLVM/ClangCL toolset instead: clang defines
# __SIZEOF_INT128__ on x64, so pgl takes the native __int128 path and never
# pulls in Boost, while clang-cl still emits an MSVC-ABI extension. The VS
# generator is forced (so CMAKE_GENERATOR_TOOLSET is honored — Ninja ignores it);
# the runner is pinned to windows-2022 in the workflow so this generator name is
# stable.
environment = { CMAKE_GENERATOR = "Visual Studio 17 2022", CMAKE_GENERATOR_TOOLSET = "ClangCL" }
